--- a/BreveCursoPHP/Views/indexPhp.html
+++ b/BreveCursoPHP/Views/indexPhp.html
@@ -164,5 +164,13 @@
         </section>
     </main>
     <script src="../Crontollers/js/Dinamics.js"></script>
+
+    <!-- Modal Structure -->
+    <div id="nameModal" class="modal">
+        <div class="modal-content">
+            <h3>INGRESE SU NOMBRE</h3>
+            <button id="closeModalButton" class="button">Aceptar</button>
+        </div>
+    </div>
 </body>
 </html>
