feat trabajandole al js

--- a/BreveCursoPHP/Views/indexPhp.html
+++ b/BreveCursoPHP/Views/indexPhp.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../Models/img/jolifoodslogo.png" type="image/png">
+    <link rel="icon" href="../assets/img/jolifoodslogo.png" type="image/png">
     <title>Descargo de Responsabilidad - Ingreso a Datacenter</title>
-    <link rel="stylesheet" href="../Models/css/indexPhp.css">
+    <link rel="stylesheet" href="../assets/css/indexPhp.css">
 </head>
 <body>
 
     <header class="main-header">
         <div class="logo-area">
-            <img src="../Models/img/jolifoodslogo.png" alt="Jolifoods Logo" class="logo">
+            <img src="../assets/img/jolifoodslogo.png" alt="Jolifoods Logo" class="logo">
         </div>
         <div class="header-title">
             <h1 class="document-title">Descargo de Responsabilidad</h1>
@@ -163,14 +163,44 @@
             </div>
         </section>
     </main>
-    <script src="../Crontollers/js/Dinamics.js"></script>
-
-    <!-- Modal Structure -->
-    <div id="nameModal" class="modal">
-        <div class="modal-content">
-            <h3>INGRESE SU NOMBRE</h3>
-            <button id="closeModalButton" class="button">Aceptar</button>
+     <footer class="main-footer">
+        <div class="footer-container">
+            <div class="footer-logo">
+                <img src="../assets/img/jolifoodslogo.png" alt="Joli Logo">
+            </div>
+            <div class="footer-links">
+                <div class="nav-column">
+                    <a href="#">Inicio</a>
+                    <a href="#">Portafolio Joli</a>
+                    <a href="#">Nuestra empresa</a>
+                </div>
+                <div class="nav-column">
+                    <a href="#">Nuestros negocios</a>
+                    <a href="#">Sostenibilidad</a>
+                    <a href="#">¿Dónde estamos?</a>
+                </div>
+            </div>
+            <div class="footer-contact">
+                <div class="social-links">
+                    <a href="#"><img src="https://encrypted-tbn0.gstatic.com/licensed-image?q=tbn:ANd9GcQWHHuQ2-evGLp7v9gX0lg4A7ePHW2tpjad_yK43zPxhh_DELDV2AQypm9IDX3r71qbFwebu1DkkPElhgTbr4xzJzUgz8620VOf-_kBFy58JnJGrPw" alt="Instagram"></a>
+                    <a href="#"><img src="https://encrypted-tbn3.gstatic.com/licensed-image?q=tbn:ANd9GcSzeQnctim2jQLl_d4hL23hU4iI92JHeW5cTlRFCZusdAPMQo4GDtkqVnYBfwkBoKXlVx5GX9iv4X8Vx7PU7khmcPKF8sUsOqtJ3dLmSCxWVB8k4Kk" alt="LinkedIn" class="linked1"></a>
+                    <a href="#"><img src="https://encrypted-tbn3.gstatic.com/licensed-image?q=tbn:ANd9GcS7_lgRmGKc1jxX1EzdXZg1K3WHesgcKq6TeCRQ_C3Oc3Ys3vlyNcRggeG-V4s9yid8DMwfiy313HS-jTxMq6UPXl7rkiwQoDm52YvT1jB0SRCZ8z8" alt="YouTube"></a>
+                </div>
+                <div class="contact-form">
+                    <input type="email" placeholder="Correo electrónico">
+                    <button class="location-button">¿Dónde estamos?</button>
+                </div>
+            </div>
         </div>
-    </div>
+        <div class="footer-bottom">
+            <span>Política de tratamiento de datos</span>
+            <span>Política de SACRILAFT</span>
+            <span>Política de transparencia y ética empresarial</span>
+            <span>2025 Joli Todos los derechos reservados</span>
+        </div>
+    </footer>
+    <!-- Modal Structure -->
+    <div id="modalConteiner"></div>
+    <script src="../assets/js/Dinamics.js"></script>
 </body>
 </html>
