--- a/Proyectos/DataCenter/view/contenidoHTML.html
+++ b/Proyectos/DataCenter/view/contenidoHTML.html
@@ -1,5 +1,6 @@
 <!--Aqui vamos a colocar las ventanas emergentes etc y las llamaremos con promises-->
 
 <!--Toasts-->
-<link rel="stylesheet" href="model/contenidoHTML.css">
-<div id="mensajeError1" role="alert" aria-live="assertive">Llene todos los campos</div>
+<div id="mensajeError1" class="toast-error" style="display: none;">
+    <p>Por favor, complete todos los campos.</p>
+</div>
